# opencascade-wasm32-unknown-unknown-example

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  global.d.ts  index.html  next.config.js  package-lock.json  package.json  run_node.mjs  tsconfig.json
.github/workflows/: deploy.yml
app/: layout.tsx  page.tsx
app/selftest/: page.tsx
notes/: 20260621-opencascadeをwasm32-unknown-unknownでビルドする技術.md
public/: colored_box_roundtrip.step
src/: main.rs
wasm/: Cargo.toml  build.sh  package-lock.json  package.json  patch_glue.mjs  wasi_shim.js
wasm/src/: lib.rs
