[package]
name = "cadrum_web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
# cadrum from crates.io, pinned by semver (^0.8 — cadrum's own README
# recommendation). Cargo.lock is committed for reproducible builds. Default
# features (color/png) match the known-good build.
cadrum = "^0.8"

# Size optimization for the final wasm (rust side only; OCCT/C++ is handled by cc).
# No `panic = "abort"`: wasm32-unknown-unknown already defaults to abort, so rustc
# emits no (legacy-EH) landing pads to clash with OCCT's exnref EH.
#
# wasm-opt (binaryen) runs as a separate post-pass, enabled the Trunk way via
# `data-wasm-opt="z"` on the rust link in index.html (size-optimizing).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
